Adding some style to the cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <div id="board">
-        
+        <ul id="cards_list"></ul>
       </div>
     </main>
     <div id="app"></div>
