--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7 i 1/2 - Joc de cartes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="card_styles.css">
   </head>
   <body>
     <header>
