--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7 i 1/2 - Joc de cartes</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="card_styles.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <header>
